[package]
name = "rt-logger"
version = "0.1.0"
authors = ["Hadrien Grasland <grasland@lal.in2p3.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation = { git = "https://github.com/HadrienG2/abomonation.git", branch = "alignment" }
abomonation_derive = { git = "https://github.com/HadrienG2/abomonation_derive.git", branch = "next-abomonation" }
crossbeam-channel = "0.4"
log = "0.4"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_derive = "0.2"
quickcheck_macros = "0.8"
rand = "0.7"
testbench = "0.7"

[profile.release]
# Debug info is useful for profiling
debug = true
